--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,10 +14,7 @@ services:
       - notes-app-nw
 
   django_app:
-    build:
-      context: .
-    image: django_app
-    container_name: "django_cont"
+    image: uttamsingh1701/notes-app:latest
     ports:
       - "8000:8000"
     command: sh -c "python manage.py migrate --noinput && gunicorn notesapp.wsgi --bind 0.0.0.0:8000"
